--- a/src/components/card/Card.module.css
+++ b/src/components/card/Card.module.css
@@ -1,5 +1,5 @@
 .Card {
-    border: .1rem solid rgb(134, 132, 132);
+    border: .1rem solid rgb(130, 130, 130);
     border-radius: .5rem;
 
     display: flex;
@@ -14,4 +14,21 @@
 .Card img {
     border: .1rem solid rgb(0, 0, 0);
     min-height: 100%;
+}
+
+.Card h2 {
+    margin-bottom: .5rem;
+}
+
+.Card p {
+    font-weight: 600;
+}
+
+@media screen and (min-width: 1000px) {
+
+    .Card {
+        min-width: 25rem;
+        max-width: fit-content;
+    }
+    
 }
